# robotics_project

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  custom_joint_publisher.cpp  custom_joint_subscriber.cpp  docker-compose.yaml
Computer Vision/: .gitignore
Computer Vision/src/: image_processing_pipeline.cpp
blender_files/: Block_Shoot_Plugin.py  block_automated.blend  block_automated.blend1
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/src/: Node Communication Channels Names.txt  global.env.launch
catkin_ws/src/beginner_tutorials/: CMakeLists.txt  package.xml
catkin_ws/src/launch/: global.launch  monitor.cpp
catkin_ws/src/models/: ImageToStl.com_x1-y2-z1.dae  ImageToStl.com_x1-y2-z2-twinfillet.dae  ImageToStl.com_x2-y2-z2-fillet.dae  destination.stl  test_world  x1-y1-z2.dae  x1-y2-z2.dae  x1-y3-z2-fillet.dae  (+3 more)
catkin_ws/src/pkg__control_new/: CMakeLists.txt  package.xml
catkin_ws/src/pkg__control_new/launch/: gazebo.interface.launch  settings.launch  ur5.launch  ur5.test.launch
catkin_ws/src/pkg__control_new/src/: gazebo.interface.node.cpp  ur5.node.cpp  ur5.test.dummy.cpp
catkin_ws/src/pkg__control_new/src/libraries/: CMakeLists.txt  gazebo_interpreter.cpp  gazebo_interpreter.h  link_attacher.cpp  link_attacher.h  robot.cpp  robot.h
catkin_ws/src/pkg__detection/: CMakeLists.txt
catkin_ws/src/pkg__detection/launch/: calibration.launch  detection.launch  detection_settings.launch  opencv.test.launch  settings.launch
catkin_ws/src/pkg__detection/src/: block_detection_rosrun.cpp  calibration.node.cpp  detection.node.cpp  image_processing_pipeline.cpp  opencv.test.cpp  test_true_send.cpp
catkin_ws/src/pkg__detection/src/libraries/: CMakeLists.txt  data_type_handler.cpp  data_type_handler.h  detection.cpp  detection.h  display_utility.cpp  location_handler.cpp  location_handler.h  pipeline.cpp  recognition.cpp  recognition.h  settings.cpp  settings.h  util_types.h
catkin_ws/src/pkg__dummy_nodes/: CMakeLists.txt  package.xml
catkin_ws/src/pkg__dummy_nodes/launch/: detection.test.launch  detection_calibration.test.launch  motion_planning.test.launch  save_placeholder_data.test.launch  ur5_motion.test.launch  ur5_no_detection.test.launch
catkin_ws/src/pkg__dummy_nodes/src/: core_detection.dummy.cpp  debug_detection.dummy.cpp  detection.dummy.cpp  display_camera.dummy.cpp  joint_states.dummy.cpp  listener.Float64MultiArray.dummy.cpp  listener.JointState.dummy.cpp  motion_planning.dummy.cpp  placeholder_camera_data.dummy.cpp  placeholder_camera_data.dummy.py  save_camera_data.dummy.cpp  simulated_zed_capture.dummy.cpp  simulated_zed_data.dummy.cpp  temporary_file_converter.cpp
catkin_ws/src/pkg__dummy_nodes/src/libraries/: CMakeLists.txt
catkin_ws/src/pkg__motion_planning/: CMakeLists.txt  package.xml
catkin_ws/src/pkg__motion_planning/launch/: motion_planning.launch
catkin_ws/src/pkg__motion_planning/src/: curve_plotting.py  motion_planning.node.cpp  motion_planning.test.cpp  motion_planning_node.cpp
catkin_ws/src/pkg__motion_planning/src/libraries/: CMakeLists.txt  bezier_curve.cpp  bezier_curve.h  motion_planning.cpp  motion_planning.h
catkin_ws/src/pkg__test_nodes/: CMakeLists.txt  package.xml
catkin_ws/src/pkg__test_nodes/src/: motion_planning.testnode.cpp
catkin_ws/src/pkg__zed2_camera/: CMakeLists.txt  package.xml
catkin_ws/src/pkg__zed2_camera/launch/: proxy.launch
catkin_ws/src/pkg__zed2_camera/src/: camera_rosrun.py  docker_proxy.node.cpp  save_instance_to_file.py
computer_vision/src/: CMakeLists.txt  block_detection_rosrun.cpp  camera_rosrun.py  display_utility.cpp  display_utility.h  image_processing_pipeline.cpp  pipeline.cpp  pipeline.h  pipeline_library.h  settings.h  test_true_send.cpp  tmp.cpp
computer_vision/src/Zed2_Camera/: CMakeLists.txt  main.cpp  test.py
computer_vision/src/libraries/: CMakeLists.txt  display_utility.cpp  display_utility.h  location_handler.cpp  location_handler.h  pipeline.cpp  pipeline.h  recognition.cpp  recognition.h  settings.cpp  settings.h  temp_file_handler.cpp  temp_file_handler.h
computer_vision/src/testing/catkin_ws/: testing_ros_ws.code-workspace
computer_vision/src/testing/catkin_ws/install/: .rosinstall  local_setup.sh  setup.sh
computer_vision/src/testing/catkin_ws/install/lib/pkgconfig/: test_package.pc
computer_vision/src/testing/catkin_ws/install/lib/test_package/: test_package
computer_vision/src/testing/catkin_ws/install/share/test_package/cmake/: test_packageConfig.cmake
computer_vision/src/testing/catkin_ws/src/test_package/: CMakeLists.txt  package.xml
computer_vision/src/testing/catkin_ws/src/test_package/src/: msg.py  receiver.cpp
launch/: joint.launch
nodes/: joint_publisher.cpp  joint_subscriber.cpp
project_package/: CMakeLists.txt  msg.py  package.xml
project_package/launch/: joint.launch
project_package/src/: foo  foo.cpp  joint_publisher.cpp  joint_subscriber.cpp  main.cpp  position_control.cpp
project_package/src/headers/: bezier_curve.h  differential_kinematics.h  direct_kinematics.h  inverse_kinematics.h  joint_publisher.h  joint_subscriber.h  motion_planning.h  position_control.h  state_machine.h  ur5.h
project_package/src/state_machine/: concrete_states.cpp  concrete_states.h  main.cpp  process.cpp  process.h  state.h
spawn_blocks/: CMakeLists.txt  package.xml
spawn_blocks/launch/: spawner.launch
spawn_blocks/models/X1-Y1-Z2/: model.config  model.sdf
spawn_blocks/models/X1-Y2-Z1/: model.config  model.sdf
spawn_blocks/models/X1-Y2-Z2/: model.config  model.sdf
spawn_blocks/models/X1-Y2-Z2-CHAMFER/: model.config  model.sdf
spawn_blocks/models/X1-Y2-Z2-TWINFILLET/: model.config  model.sdf
spawn_blocks/models/X1-Y3-Z2/: model.config  model.sdf
spawn_blocks/models/X1-Y3-Z2-FILLET/: model.config  model.sdf
spawn_blocks/models/X1-Y4-Z1/: model.config  model.sdf
spawn_blocks/models/X1-Y4-Z2/: model.config  model.sdf
spawn_blocks/models/X2-Y2-Z2/: model.config  model.sdf
spawn_blocks/models/X2-Y2-Z2-FILLET/: model.config  model.sdf
spawn_blocks/src/: spawn.cpp
(+96 files in other folders)
